<resources>
    <string name="app_name">PinAppHomeWork</string>
    <string name="correct_pin">PIN is correct!</string>
    <string name="incorrect_pin">PIN is not correct!</string>
    <string name="profile_name">Alma Serzhanova</string>
    <string name="profile_email">alma.serzhanova@gmail.com</string>
    <string name="share">Share</string>
    <string name="send_by_email">Отправить по почте</string>
    <string name="call">Позвонить</string>
    <string name="open_cam">Запустить камеру</string>
    <string name="btn_read_news">Почитать новоcти</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_news">First news</string>
    <string name="second_news">Second news</string>
    <string name="third_news">Third news</string>
    <string name="fourth_news">Fourth news</string>
    <string name="fifth_news">Fifth news</string>
    <string name="sixth_news">Sixth news</string>
    <string name="open_convertor">Открыть конвертер</string>
    <string name="currency">Currency</string>
    <string name="dollars">Доллары, США</string>
    <string name="lyra">Лира, Турция</string>
    <string name="tenge">Тенге, Казахстан</string>
    <string name="euro">Евро, ЕС</string>
    <string name="btn_add_currency">Добавить</string>
    <string name="choose_flag">Выбрать флаг</string>
</resources>