<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewsListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/tv_first_news"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_news"/>
        <TextView
            android:id="@+id/tv_second_news"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/second_news"/>
        <TextView
            android:id="@+id/tv_third_news"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/third_news"/>
        <TextView
            android:id="@+id/tv_fourth_news"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fourth_news"/>
        <TextView
            android:id="@+id/tv_fifth_news"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fifth_news"/>
        <TextView
            android:id="@+id/tv_sixth_news"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sixth_news"/>
    </LinearLayout>


</ScrollView>