<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/ava"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            android:src="@drawable/img_ava" />

        <TextView
            style="@style/ProfileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/profile_name"
            android:textAlignment="center"></TextView>

        <TextView
            style="@style/ProfileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/profile_email"
            android:textAlignment="center"></TextView>

        <Button
            android:id="@+id/btn_share"
            style="@style/ProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/share"
            android:textAllCaps="false"></Button>

        <Button
            android:id="@+id/btn_send_by_email"
            style="@style/ProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send_by_email"
            android:textAllCaps="false"></Button>

        <Button
            android:id="@+id/btn_call"
            style="@style/ProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/call"
            android:textAllCaps="false"></Button>

        <Button
            android:id="@+id/btn_open_cam"
            style="@style/ProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/open_cam"
            android:textAllCaps="false"></Button>

    </LinearLayout>
</ScrollView>